p an dh1 in main

--- a/index.html
+++ b/index.html
@@ -19,5 +19,10 @@
     </header>
     <div class="big-container">
       <main>
-        
+        <h1>Pricing</h1>
+        <p class="p-in-main">
+          Quickly build an effective pricing table for your potential customers
+          with this Bootstrap example. It’s built with default Bootstrap
+          components and utilities with little customization.
+        </p>
       </main>
