.leader div in boby

--- a/index.html
+++ b/index.html
@@ -26,3 +26,6 @@
           components and utilities with little customization.
         </p>
       </main>
+      <div class="leader">
+        
+      </div>
