.div-1 and .old div

--- a/index.html
+++ b/index.html
@@ -27,5 +27,8 @@
         </p>
       </main>
       <div class="leader">
-        
+        <div class="div-1">
+          <div class="old">
+          </div>
+        </div>
       </div>
