--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <div class="leader">
         <div class="div-1">
           <div class="old">
+            <div class="clo"><h4>Free</h4></div>
           </div>
         </div>
       </div>
