ul li and button in old

--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
         <div class="div-1">
           <div class="old">
             <div class="clo"><h4>Free</h4></div>
+            <div class="clo2">
+              <h1>$0 <small>/ mo</small></h1>
+              <ul>
+                <li>10 users included</li>
+                <li>1 GB of storage</li>
+                <li>Email support</li>
+                <li>Help center access</li>
+              </ul>
+              <button class="button-2">Sing up for free</button>
+            </div>
           </div>
         </div>
       </div>
