--- a/index.html
+++ b/index.html
@@ -58,20 +58,25 @@
           </div>
         </div>
 
-      <div class="div-1">
-        <div class="old">
-          <div class="clo"><h4>Enterprise</h4></div>
-          <div class="clo2">
-            <h1>$29 <small>/ mo</small></h1>
-            <ul>
-              <li>30 users included</li>
-              <li>15 GB of storage</li>
-              <li>Phone and email support</li>
-              <li>Help center access</li>
-            </ul>
-            <button class="button-2">Contact us</button>
+        <div class="div-1">
+          <div class="old">
+            <div class="clo"><h4>Enterprise</h4></div>
+            <div class="clo2">
+              <h1>$29 <small>/ mo</small></h1>
+              <ul>
+                <li>30 users included</li>
+                <li>15 GB of storage</li>
+                <li>Phone and email support</li>
+                <li>Help center access</li>
+              </ul>
+              <button class="button-2">Contact us</button>
+            </div>
           </div>
         </div>
       </div>
+      <footer class="footer">
+        
+      </footer>
     </div>
-      </div>
+  </body>
+</html>
