--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
       </div>
       <footer class="footer">
         <hr/>
-        
+        <div class="div-footer">
+          
+        </div>
       </footer>
     </div>
   </body>
