.div-1 in div-footer

--- a/index.html
+++ b/index.html
@@ -77,7 +77,12 @@
       <footer class="footer">
         <hr/>
         <div class="div-footer">
-          
+          <div class="div-footer-1">
+            <img
+              src="https://getbootstrap.com/docs/5.0/assets/brand/bootstrap-logo.svg"
+              width="25px"/>
+            <small> © 2017-2020</small>
+          </div>
         </div>
       </footer>
     </div>
