.div-2 in div-footer

--- a/index.html
+++ b/index.html
@@ -83,6 +83,22 @@
               width="25px"/>
             <small> © 2017-2020</small>
           </div>
+          <div class="div-footer-2">
+            <h5>Features</h5>
+            <ul>
+              <li><a class="a" href="">Cool stuff</a></li>
+              <li><a class="a" href="">Random feeatyre</a></li>
+              <li></li>
+              <li><a class="a" href="">Team feature</a></li>
+              <li></li>
+              <li><a class="a" href="">Stuff for developers</a></li>
+              <li></li>
+              <li><a class="a" href="">Another one</a></li>
+              <li></li>
+              <li><a class="a" href="">Last time</a></li>
+              <li></li>
+            </ul>
+          </div>
         </div>
       </footer>
     </div>
