.div-3 in div-footer

--- a/index.html
+++ b/index.html
@@ -99,6 +99,15 @@
               <li></li>
             </ul>
           </div>
+          <div class="div-footer-2">
+            <h5>Resources</h5>
+            <ul>
+              <li><a class="a" href="">Recource</a></li>
+              <li><a class="a" href="">Recource name</a></li>
+              <li><a class="a" href="">Another recource</a></li>
+              <li><a class="a" href="">Final recoutce</a></li>
+            </ul>
+          </div>
         </div>
       </footer>
     </div>
