--- a/index.html
+++ b/index.html
@@ -108,6 +108,15 @@
               <li><a class="a" href="">Final recoutce</a></li>
             </ul>
           </div>
+          <div class="div-footer-2">
+            <h5>About</h5>
+            <ul>
+              <li><a class="a" href="">Team</a></li>
+              <li><a class="a" href="">Locations</a></li>
+              <li><a class="a" href="">Privacy</a></li>
+              <li><a class="a" href="">Terms</a></li>
+            </ul>
+          </div>
         </div>
       </footer>
     </div>
