--- a/index.html
+++ b/index.html
@@ -125,3 +125,205 @@
     </div>
   </body>
 </html>
+
+
+body{
+  margin: 0;
+}
+header{
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  box-shadow: 0px 0px 5px black;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  padding-left: 24px;
+  padding-right: 24px;
+  margin-bottom: 16px;
+}
+nav{
+  margin-right: 16px;
+}
+a{
+  color: black;
+  padding: 8px;
+}
+.p-in-header{
+  font-size: 24px;
+  margin: 0;
+}
+.button-1{
+  color: blue;
+  border: 1px solid blue;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-left: 12px;
+  padding-right: 12px;
+  background-color: white;
+  border-radius: 5px;
+}
+.button-1:hover{
+  background-color: blue;
+  color: white;
+}
+
+.big-container{
+  margin-left: 60px;
+  margin-right: 60px;
+  padding-left: 12px;
+  padding-right: 12px;
+}
+main{
+  margin-left: 118px;
+  margin-right: 118px;
+  padding-right: 16px;
+  padding-left: 16px;
+  padding-top: 48px;
+  padding-bottom: 24px;
+  text-align: center;
+}
+h1{
+  margin: 0;
+  margin-bottom: 8px;
+}
+.p-in-main{
+  margin: 0;
+  margin-bottom: 8px;
+}
+.leader{
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+  margin-left: -12px;
+  margin-right: -12px;
+  margin-bottom: 16px;
+}
+.div-1{
+  padding-left: 12px;
+  padding-right: 12px;
+  max-width: 100%;
+  width: 320px;
+}
+.old{
+  border: 1px solid gray;
+  box-shadow: 2px 2px 5px black;
+}
+
+.clo{
+  margin: 0;
+  font-size: 24px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 16px;
+  padding-right: 16px;
+  background-color: rgba(0, 0, 0, 0.03);
+}
+.clo h4{
+  margin: 0;
+  font-size: 24px;
+}
+.clo2{
+  padding: 16px;
+}
+.clo2 h1{
+  margin: 0;
+  margin-bottom: 8px;
+  text-size-adjust: 100%;
+}
+small{
+  color: gray;
+}
+ul{
+  margin-bottom: 16px;
+  margin-top: 16px;
+}
+ul li{
+  list-style-type: none;
+  line-height: 24px;
+}
+.button-2{
+  color: blue;
+  border: 1px solid blue;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 16px;
+  padding-right: 16px;
+  background-color: white;
+  border-radius: 5px;
+}
+.button-2:hover{
+  color: white;
+  background-color: blue;
+}
+hr{
+  margin-top: 48px;
+  margin-bottom: 48px;
+}
+footer{
+  margin-bottom: 48px;
+}
+.div-footer{
+  margin-left: -12px;
+  margin-right: -12px;
+  
+  display: flex;
+  justify-content: space-around;
+}
+.div-footer-1{
+  display: flex;
+  flex-direction: column;
+  padding-left: 12px;
+  padding-right: 12px;
+}
+.div-footer-1 img{
+  width: 24px;
+  height: 19px;
+  margin-bottom: 8px;
+}
+.div-footer-2{
+  padding-left: 12px;
+  padding-right: 12px;
+}
+.div-footer-2 h5{
+  margin: 0;
+  margin-bottom: 8px;
+  font-size: 20px;
+  font-weight: 500;
+}
+.div-footer-2 ul{
+  margin: 0;
+  list-style-type: none;
+  padding-left: 0;
+}
+
+.a{
+  color: gray;
+  
+}
+
+@media(max-width:800px){
+  header{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      align-content: space-around;
+  }
+}
+@media(max-width:800px){
+  .leader{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      align-content: space-around;
+      max-width: 750px;
+  }
+}
+@media(max-width:800px){
+  .footer{
+      display: flex;
+      flex-wrap: wrap;
+      align-content: stretch;
+  }
+}    
+
+
